Markdown bien formateado

--- a/1.er Consigna Trabajo Obligatorio (Markdown).md
+++ b/1.er Consigna Trabajo Obligatorio (Markdown).md
@@ -1,132 +1,132 @@
-\# Desarrollo de Software Seguro: Obligatorio 1
+# Desarrollo de Software Seguro: Obligatorio 1
 
-\#\# Introducción
+## Introducción
 
 Este Write-up documenta el proceso de configuración de un entorno de pruebas utilizando Kali Linux en una máquina virtual. Se incluyen instrucciones para la instalación de un proxy de interceptación, la instalación de Docker, la ejecución de un contenedor con OWASP Juice Shop, y la verificación de la visualización del tráfico en el proxy.
 
-\#\# Requisitos Previos
+## Requisitos Previos
 
 Antes de comenzar, asegúrate de tener lo siguiente:
 
-\- Un equipo con suficiente capacidad para ejecutar una máquina virtual.
+- Un equipo con suficiente capacidad para ejecutar una máquina virtual.
 
-\- Acceso a internet para descargar las herramientas necesarias.
+- Acceso a internet para descargar las herramientas necesarias.
 
-\#\# 1\. Instalación de una Máquina Virtual de Kali Linux
+## 1. Instalación de una Máquina Virtual de Kali Linux
 
-\#\#\# 1.1 Descarga de Kali Linux
+### 1.1 Descarga de Kali Linux
 
-1\. Visita la página oficial de [Kali Linux](https://www.kali.org/).
+1. Visita la página oficial de [Kali Linux](https://www.kali.org/).
 
-2\. Descarga la versión de máquina virtual más reciente de Kali Linux.
+2. Descarga la versión de máquina virtual más reciente de Kali Linux.
 
-\#\#\# 1.2 Instalación en VirtualBox
+### 1.2 Instalación en VirtualBox
 
-1\. Descarga e instala [Virtualbox](https://www.virtualbox.org/wiki/Downloads).
+1. Descarga e instala [Virtualbox](https://www.virtualbox.org/wiki/Downloads).
 
-2\. Selecciona el archivo VM de Kali Linux descargado para que se cargue la máquina virtual en el Virtual Box, y dale un click a la flecha verde que dice “Iniciar” 
+2. Selecciona el archivo VM de Kali Linux descargado para que se cargue la máquina virtual en el Virtual Box, y dale un click a la flecha verde que dice “Iniciar” 
 
-\#\# 2\. Instalación del Proxy de Interceptación
+## 2. Instalación del Proxy de Interceptación
 
-\#\#\# 2.1 Instalación de Burp Suite
+### 2.1 Instalación de Burp Suite
 
 Dentro de la máquina virtual de Kali Linux:
 
-1\. Visita la página oficial de Burp Suite [aquí](https://portswigger.net/burp/communitydownload).
+1. Visita la página oficial de Burp Suite [aquí](https://portswigger.net/burp/communitydownload).
 
-2\. Descarga la versión Community Edition.
+2. Descarga la versión Community Edition.
 
-3\. Abre una terminal y navega al directorio donde descargaste Burp Suite.
+3. Abre una terminal y navega al directorio donde descargaste Burp Suite.
 
-4\. Ejecuta el archivo descargado para instalar Burp Suite con el siguiente comando: 
+4. Ejecuta el archivo descargado para instalar Burp Suite con el siguiente comando: 
 
-\`\`\` bash 
+``` bash 
 
-sudo sh burpsuite\_community\_linux\_vX.X.sh
+sudo sh burpsuite_community_linux_vX.X.sh
 
-\`\`\`
+```
 
-5\. Sigue las instrucciones del instalador.
+5. Sigue las instrucciones del instalador.
 
-\#\# 3\. Instalación de Docker en Kali Linux
+## 3. Instalación de Docker en Kali Linux
 
-\#\#\# 3.1 Instalación de Docker
+### 3.1 Instalación de Docker
 
-1\. Abre una terminal en Kali Linux.
+1. Abre una terminal en Kali Linux.
 
-2\. Actualiza los paquetes: 
+2. Actualiza los paquetes: 
 
-\`\`\`bash
+```bash
 
 sudo apt-get update
 
-\`\`\`
+```
 
-3\. Instala Docker: 
+3. Instala Docker: 
 
-\`\`\`bash
+```bash
 
 sudo apt-get install docker.io
 
-\`\`\`
+```
 
-4\. Verifica que Docker esté correctamente instalado ejecutando: 
+4. Verifica que Docker esté correctamente instalado ejecutando: 
 
-\`\`\`bash
+```bash
 
-docker \--version
+docker --version
 
-\`\`\`
+```
 
-\#\# 4\. Ejecución de un Contenedor con OWASP Juice Shop
+## 4. Ejecución de un Contenedor con OWASP Juice Shop
 
-\#\#\# 4.1 Descarga y Ejecución de OWASP Juice Shop
+### 4.1 Descarga y Ejecución de OWASP Juice Shop
 
-1\. En la terminal de Kali Linux, ejecuta el siguiente comando para descargar la imagen de OWASP Juice Shop: 
+1. En la terminal de Kali Linux, ejecuta el siguiente comando para descargar la imagen de OWASP Juice Shop: 
 
-\`\`\`bash
+```bash
 
 sudo docker pull bkimminich/juice-shop
 
-\`\`\`
+```
 
-2\. Instala la imagen de OWASP Juice Shop en tu Docker
+2. Instala la imagen de OWASP Juice Shop en tu Docker
 
-\`\`\`bash
+```bash
 
-sudo docker run \-d \-p 3000:3000 bkimminich/juice-shop
+sudo docker run -d -p 3000:3000 bkimminich/juice-shop
 
-\`\`\`
+```
 
-3\. Verifica que el contenedor esté en ejecución:
+3. Verifica que el contenedor esté en ejecución:
 
-\`\`\`bash                  3
+```bash                  
 
 sudo docker ps
 
-\`\`\`
+```
 
-4\. Abre un navegador web en Kali Linux y accede a [localhost](http://localhost:3000) para verificar que OWASP Juice Shop se está ejecutando correctamente.
+4. Abre un navegador web en Kali Linux y accede a [localhost](http://localhost:3000) para verificar que OWASP Juice Shop se está ejecutando correctamente.
 
-\#\# 5\. Prueba de la Visualización del Tráfico en el Proxy de Interceptación
+## 5. Prueba de la Visualización del Tráfico en el Proxy de Interceptación
 
-\#\#\# 5.1 Configuración del Proxy en el Navegador
+### 5.1 Configuración del Proxy en el Navegador
 
-1\. Abre Burp Suite en Kali Linux.
+1. Abre Burp Suite en Kali Linux.
 
-2\. Configura el navegador (Firefox, por ejemplo) para usar Burp Suite como proxy:
+2. Configura el navegador (Firefox, por ejemplo) para usar Burp Suite como proxy:
 
-   \- \*\*Proxy\*\*: \`Tu dirección IP\`
+   - **Proxy**: `Tu dirección IP`
 
-   \- \*\*Puerto\*\*: \`8080\`
+   - **Puerto**: `8080`
 
-\#\#\# 5.2 Captura del Tráfico
+### 5.2 Captura del Tráfico
 
-1\. Accede nuevamente a [localhost](http://localhost:3000) desde el navegador configurado.
+1. Accede nuevamente a [localhost](http://localhost:3000) desde el navegador configurado.
 
-2\. En Burp Suite, verifica que se esté capturando el tráfico HTTP/HTTPS generado por la interacción con OWASP Juice Shop.
+2. En Burp Suite, verifica que se esté capturando el tráfico HTTP/HTTPS generado por la interacción con OWASP Juice Shop.
 
-\#\# Conclusión
+## Conclusión
 
 El ambiente de pruebas ha sido configurado exitosamente. Ahora puedes utilizar este entorno para realizar diversas actividades de seguridad, como pruebas de penetración, análisis de vulnerabilidades y más. 
 
